# mcp-ex

./: GEMINI.md  LICENSE  README.md  pyproject.toml
.gemini/: settings.json
src/mcp_ex/: test_greet_server.py
